[project]
name = "subnet-comp"
version = "0.1.0"
description = "Compartmentalized Engine-Application system with JSON-RPC 2.0 boundary"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
