[project]
name = "subnet-engine"
version = "0.1.0"
description = "Engine compartment — thin httpx JSON-RPC client"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "anyio>=4.0",
    "tenacity>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
